[package]
name = "nhl-api-client"
version = "0.1.11"
edition = "2021"
license = "MIT"
authors = ["Garrett Chesnut"]
description = "This is a passion project used to learn Rust. End goal is for this to be library that can easily interface with NHL API."
repository = "https://github.com/garrettdc2/nhl-api-client"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"